add Css effects

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header>
         <div class="header__text">
             <div class="header__text__title">
-                <h1>Hello!!!</h1>
-                <h1>We Are Creative</h1>
-                <h1>Digital Agency.</h1>
+                <h1 id="header__text--fir">Hello!!!</h1>
+                <h1 id="header__text--sec">We Are Creative</h1>
+                <h1 id="header__text--thi">Digital Agency.</h1>
             </div>
             <div class="header__text__subtitle">
                 <h6>Lorem ipsum dolor sit amet. consectetur adipiscing elit. sed do eiusmod tempor incididunt ut</h6>
