--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="css/styles.css"/>
+    <script defer src="index.js"></script>
     <script src="https://kit.fontawesome.com/7bc825b445.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,10 +14,10 @@
             <img src="img/LOGO.png" alt="logo">
         </div>
         <div class="navBar__menu">
-            <span>WORK</span>
-            <span>ABOUT</span>
-            <span>BLOG</span>
-            <span>CONTACT</span>
+            <span id="work">WORK</span>
+            <span id="about">ABOUT</span>
+            <span id="blog">BLOG</span>
+            <span id="contact">CONTACT</span>
         </div>
     </nav>
     <header>
