add Css animations

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <span>Copyright@2021 - Mint.All Right Reserved</span>
         </div>
         <div class="footer__btn">
-            <span>BACK TO TOP</span>
+            <span id="footer__btn">BACK TO TOP</span>
             <i class="fas fa-angle-up"></i>
         </div>
     </footer>
