change to a responsive web page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="css/styles.css"/>
     <script defer src="index.js"></script>
@@ -53,7 +53,7 @@
                 <i class="fas fa-angle-down"></i>
             </div>
         </div>
-        <div class="portfolio__images">
+        <div class="portfolio__images">        
             <div class="portfolio__images--first">
                 <img src="img/img2.PNG" alt="img2" id="img2">
                 <img src="img/img3.PNG" alt="img3" id="img3">
@@ -65,7 +65,7 @@
             <div class="portfolio__images--third">
                 <img src="img/img6.PNG" alt="img6" id="img6">
                 <img src="img/img7.PNG" alt="img7" id="img7">
-            </div>
+            </div>        
         </div>
         <div class="portfolio__button">
             <button>SHOW ME MORE</button>
@@ -82,18 +82,20 @@
             </div>
         </div>
         <div class="about__contents">
-            <div class="about__image--first">
-                <img src="img/man1.PNG" alt="man1" id="man1">
-                <div class="about__image__title">
-                    <span class="about__image__title--first">Paul Brilliant</span>
-                    <span class="about__image__title--second">developer</span>
+            <div class="about__contents__img">
+                <div class="about__image--first">
+                    <img src="img/man1.PNG" alt="man1" id="man1">
+                    <div class="about__image__title">
+                        <span class="about__image__title--first">Paul Brilliant</span>
+                        <span class="about__image__title--second">developer</span>
+                    </div>
                 </div>
-            </div>
-            <div class="about__image--second">                
-                <img src="img/man2.PNG" alt="man2" id="man2">                
-                <div class="about__image__title">
-                    <span class="about__image__title--first">Luke Skywalker</span>
-                    <span class="about__image__title--second">web Designer</span>
+                <div class="about__image--second">                
+                    <img src="img/man2.PNG" alt="man2" id="man2">                
+                    <div class="about__image__title">
+                        <span class="about__image__title--first">Luke Skywalker</span>
+                        <span class="about__image__title--second">web Designer</span>
+                    </div>
                 </div>
             </div>
             <div class="about__text">                
@@ -117,26 +119,35 @@
         </div>
         <div class="blog__images">
             <div class="blog__images--first">
-                <img src="img/room1.PNG" alt="room1" id="room1">
+                <div class="blog__images__image">
+                    <img src="img/room1.PNG" alt="room1" id="room1">
+                </div>                
                 <div class="blog__images__text">
                     <h3>SUPER BLOG ARTICLE!</h3>
-                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes tabore et dolore magna aliqua.</h5>
+                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes</h5>
+                    <h5>tabore et dolore magna aliqua.</h5>
                     <h6>20 May 2020</h6>
                 </div>
             </div>
             <div class="blog__images--second">
-                <img src="img/room2.PNG" alt="room2" id="room2">
+                <div class="blog__images__image">
+                    <img src="img/room2.PNG" alt="room2" id="room2">
+                </div>
                 <div class="blog__images__text">
                     <h3>SUPER BLOG ARTICLE!</h3>
-                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes tabore et dolore magna aliqua.</h5>
+                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes</h5>
+                    <h5>tabore et dolore magna aliqua.</h5>
                     <h6>20 May 2020</h6>
                 </div>
             </div>
             <div class="blog__images--third">          
-                <img src="img/room3.PNG" alt="room3" id="room3">
+                <div class="blog__images__image">
+                    <img src="img/room3.PNG" alt="room3" id="room3">
+                </div>
                 <div class="blog__images__text">
                     <h3>SUPER BLOG ARTICLE!</h3>
-                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes tabore et dolore magna aliqua.</h5>
+                    <h5>Lorem ipsum dolor sit amet, consectetur undo thes</h5>
+                    <h5>tabore et dolore magna aliqua.</h5>
                     <h6>20 May 2020</h6>
                 </div>
             </div>
@@ -174,7 +185,7 @@
                 </button>
             </div>
             <div class="contact__content__image">
-                <img src="img/contact.PNG" alt="contact" id="contact">
+                <img src="img/contact.PNG" alt="contact" id="contact--image">
             </div>
         </div>
         <div class="contact__icons">
