--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <img src="img/LOGO.png" alt="logo">
         </div>
         <div class="navBar__menu">
-            <span id="work">WORK</span>
-            <span id="about">ABOUT</span>
-            <span id="blog">BLOG</span>
-            <span id="contact">CONTACT</span>
+            <span id="work" class="navBar__menu__menu">WORK</span>
+            <span id="about" class="navBar__menu__menu">ABOUT</span>
+            <span id="blog" class="navBar__menu__menu">BLOG</span>
+            <span id="contact" class="navBar__menu__menu">CONTACT</span>
         </div>
     </nav>
     <header>
